# ScalarScope

./: .gitignore  README.md  pyproject.toml
docs/: RESULTS_AND_LIMITATIONS.md
examples/: bench_kv_cache.py  demo_geometry.py  demo_governor.py  demo_learned_critic.py  demo_learned_critic_v1.py  demo_loop.py  demo_onnx_loop.py  demo_revision.py
experiments/analysis/: evaluator_overlap_data.json  evaluator_overlap_report.md
experiments/exports/: sample_correlated.json  sample_orthogonal.json
experiments/results/20260204_171349/exp1/: exp1_null_vs_structured_results.json
experiments/results/20260204_171349/exp2/: exp2_holdout_transfer_results.json
experiments/results/20260204_171349/exp3/: exp3_adversarial_results.json
experiments/results/20260204_171413/exp1/: exp1_null_vs_structured_results.json
experiments/results/20260204_171413/exp2/: exp2_holdout_transfer_results.json
experiments/results/20260204_171413/exp3/: exp3_adversarial_results.json
experiments/results/20260204_171439/: failure_report.json  negative_results.md
experiments/results/20260204_171439/exp1/: exp1_null_vs_structured_results.json
experiments/results/20260204_171439/exp2/: exp2_holdout_transfer_results.json
experiments/results/20260204_171439/exp3/: exp3_adversarial_results.json
experiments/results/20260204_171453/: failure_report.json  negative_results.md
experiments/results/20260204_171453/exp1/: exp1_null_vs_structured_results.json
experiments/results/20260204_171453/exp2/: exp2_holdout_transfer_results.json
experiments/results/20260204_171453/exp3/: exp3_adversarial_results.json
experiments/results/20260204_173241/: correlated_holdout_results.json
experiments/results/20260204_173254/: correlated_holdout_results.json
scripts/: analyze_evaluator_overlap.py  export_model.py  run_correlated_holdout_experiment.py  run_full_experiments.py  verify_correlated_professors.py
src/aspire/: __init__.py
src/aspire/analysis/: evaluator_overlap.py
src/aspire/conscience/: __init__.py  leakage.py  metrics.py
src/aspire/core/: tokens.py  types.py
src/aspire/critic/: __init__.py  features_v1.py  head.py  learned_critic.py  learned_critic_v1.py
src/aspire/engine/: __init__.py  loop.py
src/aspire/experiments/: __init__.py  experiment_runner.py  figures.py
src/aspire/export/: geometry_export.py
src/aspire/geometry/: __init__.py
src/aspire/professors/: __init__.py  adversarial.py  base.py
src/aspire/student/: __init__.py  onnx_student.py
src/scalarscope/: __init__.py
src/scalarscope/adversarial/: __init__.py  students.py  validation.py
src/scalarscope/analysis/: __init__.py  evaluator_overlap.py
src/scalarscope/conscience/: ablation.py  validation.py
src/scalarscope/core/: __init__.py
src/scalarscope/critic/: __init__.py  features.py
src/scalarscope/engine/: __init__.py  loop.py  revision_engine.py
src/scalarscope/experiments/: experiment1_null_vs_structured.py  experiment2_holdout_transfer.py  experiment3_adversarial.py
src/scalarscope/geometry/: state.py
src/scalarscope/professors/: adversarial.py
src/scalarscope/student/: __init__.py  model.py  onnx_student_v2.py
tests/: __init__.py  test_adversarial.py  test_calibration.py  test_conscience.py  test_experiments.py  test_failure_tracking.py
