[project]
name = "scalarscope"
version = "0.1.1"
description = "ScalarScope - Evaluative Internalization Training Framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = ["machine-learning", "training", "evaluation", "internalization", "scalar-feedback", "alignment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/scalarscope"
Repository = "https://github.com/mcp-tool-shop-org/scalarscope"
Issues = "https://github.com/mcp-tool-shop-org/scalarscope/issues"

[project.optional-dependencies]
onnx = [
    "onnxruntime-gpu>=1.16",
    "transformers>=4.36",
    "sentencepiece>=0.1.99",
    "protobuf>=4.0",
]

torch = [
    "torch>=2.0",
]

dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

export = [
    "optimum[onnxruntime-gpu]>=1.16",
    "onnx>=1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scalarscope"]

[tool.ruff]
line-length = 100
target-version = "py311"
